Дополнил скрипт, изменил json

--- a/Site/Home.html
+++ b/Site/Home.html
@@ -37,16 +37,20 @@
     <hr>
     
     <main id = "Main">
-        <div class="block">
-            <div class="desP">
-                <img id="desPImg" src="img/ProjectPreview/task1(0).png" alt="task1"></img>
-                <p>Решалка кв. уравнений (для консоли)</p>
+        <!--<div class="Category">
+            <p class="nameCategory"> </p>
+            <div class="block">
+                <div class="desP">
+                    <img id="desPImg" src="img/ProjectPreview/task1(0).png" alt="task1"></img>
+                    <p>Решалка кв. уравнений (для консоли)</p>
+                </div>
+                <div class="buttonP">
+                    <button class="" type="button"><a href="">Получить</a></button>
+                </div>
             </div>
-            <div class="buttonP">
-                <button class="" type="button"><a href="">Получить</a></button>
-            </div>
-        </div>
+        </div> -->
     </main>
+
 
     <footer>
         <div class="footerTop">
