Дополнил скрипт изменил разметку

--- a/Site/Home.html
+++ b/Site/Home.html
@@ -19,8 +19,8 @@
                             Отзывы
                         </a>
                     </button>
-                    <button class="ButtonHeader" type="button"><a href=""> <img id="imgButton" src="img/basket.png" alt="basket"></img> Мои покупки</a></button>
-                    <button class="ButtonHeader" type="button"><a href=""> <img id="imgButton"  src="img/favorites.png" alt="favorites"></img>Избранное</a></button>
+                    <!--<button class="ButtonHeader" type="button"><a href=""> <img id="imgButton" src="img/basket.png" alt="basket"></img> Мои покупки</a></button>
+                    <button class="ButtonHeader" type="button"><a href=""> <img id="imgButton"  src="img/favorites.png" alt="favorites"></img>Избранное</a></button>-->
                 </div>
                 <div id="rightButtonHeader" >
                     <button class="logInOut" type="button"><a href="SignUp.html">Регистрация</a></button>
@@ -34,7 +34,7 @@
             </div>
         </div>
     </header>
-    <hr>
+    <hr style="width: 100%;">
     
     <main id = "Main">
         <!--<div class="Category">
@@ -55,7 +55,7 @@
     <footer>
         <div class="footerTop">
             <img id = "stackoverflow" src="img/stackoverflow.png" alt="stackoverflow"> </img>
-            <div>Все продаваемые программы были написаны лично нашей командой при помощи Stack Overflow и танцев с бубном.</div>
+            <div>Все предоставленные  программы были написаны лично нашей командой при помощи Stack Overflow и танцев с бубном.</div>
             <img id = "paysystems" src="img/pay-systems.png" alt="ay-systems"> </img>
         </div>
         <div class="footerDawn">
