--- a/Site/Home.html
+++ b/Site/Home.html
@@ -34,7 +34,7 @@
             </div>
         </div>
     </header>
-    <hr style="width: 100%;">
+    <hr style="width: 100%; padding-top: 1px;">
     
     <main id = "Main">
         <!--<div class="Category">
