--- a/Site/Home.html
+++ b/Site/Home.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>CSUstore – интернет-магазин ЧелГУ</title>
   <link rel="stylesheet" href="css/Home.css"/>
-  <script type="text/javascript" src="script.js" defer></script>
+  <script type="text/javascript" src="JS/script.js" defer></script>
 </head>
 
 <body>
