Добавил страницу входа

--- a/Site/Home.html
+++ b/Site/Home.html
@@ -24,7 +24,7 @@
                 </div>
                 <div id="rightButtonHeader" >
                     <button class="logInOut" type="button"><a href="SignUp.html">Регистрация</a></button>
-                    <button class="logInOut" type="button"><a href="">Вход</a></button>
+                    <button class="logInOut" type="button"><a href="SignIn.html">Вход</a></button>
                 </div>
                 
             </div>
@@ -54,7 +54,7 @@
 
     <footer>
         <div class="footerTop">
-            <img id = "stackoverflow" src="img/stackoverflow.png" alt="stackoverflow"> </img>
+            <a href="https://ru.stackoverflow.com/"> <img id = "stackoverflow" src="img/stackoverflow.png"  alt="stackoverflow"></img> </a>
             <div>Все предоставленные  программы были написаны лично нашей командой при помощи Stack Overflow и танцев с бубном.</div>
             <img id = "paysystems" src="img/pay-systems.png" alt="ay-systems"> </img>
         </div>
