--- a/Site/task/task6.html
+++ b/Site/task/task6.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <button style="width: 100px;" class="logInOut" type="button"><a href="../Home.html">Вернуться назад</a></button>
+    <button style="width: 150px;" class="logInOut" type="button"><a href="../Home.html">Вернуться назад</a></button>
 
     <main style="text-align: left; padding: 10px;" id = "Main">
         <div>
@@ -41,7 +41,7 @@
     </main>
     <footer>
         <div class="footerTop">
-            <img id = "stackoverflow" src="../img/stackoverflow.png" alt="stackoverflow"> </img>
+            <a href="https://ru.stackoverflow.com/"><img id = "stackoverflow" src="../img/stackoverflow.png"  alt="stackoverflow"></img></a>
             <div>Все предоставленные  программы были написаны лично нашей командой при помощи Stack Overflow и танцев с бубном.</div>
             <img id = "paysystems" src="../img/pay-systems.png" alt="ay-systems"> </img>
         </div>
