--- a/Site/SignIn.html
+++ b/Site/SignIn.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Вход</title>
-  <link rel="stylesheet" href="css/SingUp.css" />
+  <link rel="stylesheet" href="css/SingUpIn.css" />
   <link rel="stylesheet" href="css/Home.css"/>
 </head>
 
