Исправил ошибку в слове

--- a/Site/task/QuadraticEquationsJS(2)/QuadraticEquationsJS(2).html
+++ b/Site/task/QuadraticEquationsJS(2)/QuadraticEquationsJS(2).html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
     <body>
-        <p style="text-align:  center; font-size:30px;"> Давайте сделаем вид, что я умею решать квадратные уровнения</p>
+        <p style="text-align:  center; font-size:30px;"> Давайте сделаем вид, что я умею решать квадратные уравнения</p>
     </body>
 </html>
