Изменил надпись подвала

--- a/Site/Home.html
+++ b/Site/Home.html
@@ -55,7 +55,7 @@
     <footer>
         <div class="footerTop">
             <a href="https://ru.stackoverflow.com/"> <img id = "stackoverflow" src="img/stackoverflow.png"  alt="stackoverflow"></img> </a>
-            <div>Все предоставленные  программы были написаны лично нашей командой при помощи Stack Overflow и танцев с бубном.</div>
+            <div>Все(но это не точно) предоставленные программы были написаны нашей командой при помощи Stack Overflow и танцев с бубном.</div>
             <img id = "paysystems" src="img/pay-systems.png" alt="ay-systems"> </img>
         </div>
         <div class="footerDawn">
