Изменил надпись подвала

--- a/Site/SignUp.html
+++ b/Site/SignUp.html
@@ -27,7 +27,7 @@
               <input type="password" placeholder="Повторите пароль" name="psw-repeat" required>
               <hr>
               
-              <button type="button" class="registerbtn" onclick = "alert('Упс... Что-то пошло не так, повторите попытку позже')">Регистрация</button>
+              <button type="submit" class="registerbtn" onclick = "alert('Упс... Что-то пошло не так, повторите попытку позже'); ">Регистрация</button>
             </div>
           
             <div class="container signin">
@@ -39,7 +39,7 @@
     <footer>
         <div class="footerTop">
             <img id = "stackoverflow" src="img/stackoverflow.png" alt="stackoverflow"> </img>
-            <div>Все продаваемые программы были написаны лично нашей командой при помощи Stack Overflow и танцев с бубном.</div>
+            <div>Все(но это не точно) предоставленные программы были написаны нашей командой при помощи Stack Overflow и танцев с бубном.</div>
             <img id = "paysystems" src="img/pay-systems.png" alt="ay-systems"> </img>
         </div>
         <div class="footerDawn">
