--- a/Site/SignIn.html
+++ b/Site/SignIn.html
@@ -36,7 +36,7 @@
     <footer>
         <div class="footerTop">
             <img id = "stackoverflow" src="img/stackoverflow.png" alt="stackoverflow"> </img>
-            <div>Все продаваемые программы были написаны лично нашей командой при помощи Stack Overflow и танцев с бубном.</div>
+            <div>Все(но это не точно) предоставленные программы были написаны нашей командой при помощи Stack Overflow и танцев с бубном.</div>
             <img id = "paysystems" src="img/pay-systems.png" alt="ay-systems"> </img>
         </div>
         <div class="footerDawn">
